[package]
name = "quasipaa"
version = "0.1.0"
authors = ["Mr.Panda <xivistudios@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.2"
futures = "0.1"
bytes = "0.4"
byteorder = "1.2.1"
rml_rtmp = "0.3"
mse_fmp4 = "0.1"
parking_lot = "^0.7"
actix = "^0.8.1"
failure = "0.1.5"

[dependencies.uuid]
version = "0.7"
features = ["serde", "v4"]